# scheme.c

./: .dockerignore  .gitignore  AUTHOR  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  INSTALL  LICENSE  README.md  UNINSTALL  main.c
docs/: README.md
lib/: builtin.scm
scheme/: apply.c  apply.h  assignment.c  assignment.h  begin.c  begin.h  builtin.c  builtin.h  cond.c  cond.h  define.c  define.h  environment.c  environment.h  eval.c  eval.h  gc.c  gc.h  if.c  if.h  io.c  io.h  lambda.c  lambda.h  let.c  let.h  object.c  object.h  predicate.c  predicate.h  procedure.c  procedure.h  read.c  read.h  type.h  write.c  write.h
